// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contractHandler > should handle error during EVM call 1`] = `
[
  {
    "_tag": "InvalidRequestError",
    "message": "Contract at address 0x3333333333333333333333333333333333333333 does not exist",
    "name": "InvalidRequestError",
  },
]
`;

exports[`contractHandler > should handle error during transaction creation 1`] = `
[
  {
    "_tag": "UnexpectedError",
    "message": "Error adding transaction to pool",
    "name": "UnexpectedError",
  },
]
`;

exports[`contractHandler > should handle errors returned during contract call 1`] = `
[
  [RevertError: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler > should handle invalid function encoding 1`] = `
[
  [InvalidRequest: Function "nonExistentFunction" not found on ABI.
Make sure you are using the correct ABI and that the function exists on it.

Docs: https://viem.sh/docs/contract/encodeFunctionData
Version: viem@2.23.10

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Details: Function "nonExistentFunction" not found on ABI.
Make sure you are using the correct ABI and that the function exists on it.

Docs: https://viem.sh/docs/contract/encodeFunctionData
Version: viem@2.23.10
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler > should handle missing contract 1`] = `
[
  {
    "_tag": "InvalidRequestError",
    "message": "Contract at address 0x0000000000000000000000000000000000000000 does not exist",
    "name": "InvalidRequestError",
  },
]
`;

exports[`contractHandler > should handle revert errors during contract call 1`] = `
[
  [RevertError: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73],
]
`;
